--- a/sass/main.scss
+++ b/sass/main.scss
@@ -139,7 +139,7 @@
       position: absolute;
       left: -90px;
       top: 160px;
-      z-index: 2;
+      z-index: 3;
     }
 
     &__bg-shadow-desktop {
